Fix accessing exception
`exception` does not seem to be available here as a variable, only in the `hint` hash.

--- a/src/includes/set-fingerprint/rpc/ruby.mdx
+++ b/src/includes/set-fingerprint/rpc/ruby.mdx
@@ -12,7 +12,7 @@ end
 Sentry.init do |config|
   config.before_send = lambda do |event, hint|
     if hint[:exception].is_a?(RPCError)
-      event.fingerprint = ["{{default}}", exception.code, exception.function_name]
+      event.fingerprint = ["{{default}}", hint[:exception].code, hint[:exception].function_name]
     end
 
     event
